--- a/myStory.html
+++ b/myStory.html
@@ -47,7 +47,7 @@
 	  </div> 
 	  
 	  <div class="heroImage">
-	    <img src="images/aboutUs1.jpg" alt="Janja i Đurađ" />
+	    <img src="images/AboutUs1.jpg" alt="Janja i Đurađ" />
       </div>
 	  
 	  <div class="aboutMe1">
