--- a/instructions.html
+++ b/instructions.html
@@ -45,16 +45,16 @@
     </div>
 	
 	<div class="instructionsSlider">
-      <img src="images/uputstvo1.jpg" alt="Uputstvo" />
-      <img src="images/uputstvo2.jpg" alt="Uputstvo" />
-      <img src="images/uputstvo3.jpg" alt="Uputstvo" />
-	  <img src="images/uputstvo3a.jpg" alt="Uputstvo" />
-      <img src="images/uputstvo4.jpg" alt="Uputstvo" />
-	  <img src="images/uputstvo5.jpg" alt="Uputstvo" />
-	  <img src="images/uputstvo6.jpg" alt="Uputstvo" />
-	  <img src="images/uputstvo7.jpg" alt="Uputstvo" />
-	  <img src="images/uputstvo8.jpg" alt="Uputstvo" /> 
-	  <img src="images/uputstvo9.jpg" alt="Uputstvo" />
+      <img src="images/Uputstvo1.jpg" alt="Uputstvo" />
+      <img src="images/Uputstvo2.jpg" alt="Uputstvo" />
+      <img src="images/Uputstvo3.jpg" alt="Uputstvo" />
+	  <img src="images/Uputstvo3a.jpg" alt="Uputstvo" />
+      <img src="images/Uputstvo4.jpg" alt="Uputstvo" />
+	  <img src="images/Uputstvo5.jpg" alt="Uputstvo" />
+	  <img src="images/Uputstvo6.jpg" alt="Uputstvo" />
+	  <img src="images/Uputstvo7.jpg" alt="Uputstvo" />
+	  <img src="images/Uputstvo8.jpg" alt="Uputstvo" /> 
+	  <img src="images/Uputstvo9.jpg" alt="Uputstvo" />
     </div>
 	
    
