--- a/instructions.html
+++ b/instructions.html
@@ -43,8 +43,8 @@
 	
 	<div class="clear">
     </div>
-	
-	<div class="instructionsSlider">
+<div class="containerSlider style="min-height: 100vh; width: 100%;" />	
+<div class="instructionsSlider">
       <img src="images/Uputstvo1.jpg" alt="Uputstvo" />
       <img src="images/Uputstvo2.jpg" alt="Uputstvo" />
       <img src="images/Uputstvo3.jpg" alt="Uputstvo" />
@@ -56,6 +56,7 @@
 	  <img src="images/Uputstvo8.jpg" alt="Uputstvo" /> 
 	  <img src="images/Uputstvo9.jpg" alt="Uputstvo" />
     </div>
+</div>
 	
    
 	
